JEDIT 4.1 VERSION HISTORY

* Version 4.1pre8

Thanks to Carmine Lucarelli, Chris Petersen, Jonathan Revusky,
Kris Kopicki and Silas Smith for contributing to this release.

+ Miscellaneous Changes:

- Icon syntax highlighting (Silas Smith).

- Minor updates to JavaScript and PHP modes (Chris Petersen).

- Updated Freemaker syntax highlighting (Jonathan Revusky).

- Plugin manager progress window now only has one progress bar.

- In the file system browser, S+ENTER with a directory selected opens
  the directory in a new browser window.

- Pressing LEFT in the filename field with the caret already at the
  left-most position goes to the parent directory location.

- Added View->Show Buffer Switcher command (shortcut: A+BACK_QUOTE). It
  shows the buffer switcher combo box if it is enabled.

- Improved scrolling performance when soft wrap is on. In previous 4.1
  pre-releases and especially in 4.0, the editor was noticably less
  responsive if soft wrap was on. No longer.

- NEWS.txt now documents major changes between jEdit 4.0 and 4.1.

- Added some more tips of the day.

+ Bug Fixes:

- Sometimes the status bar was not updated properly in newly created
  views.

- Fixed a few help viewer quirks.

- Fixed several bugs in the text area scrolling code.

- Fixed Global Options dialog box resizing problems.

- Fixed possible ArrayIndexOutOfBoundsExceptions when deleting text.

- Fixed various minor bugs with the "Format Paragraph" command.

- Fixed some popup menu display bugs.

- Fixed possible NullPointerException in Syntax Highlighting option
  pane.

- Highlighting of m{...} and s{...}{...} in Perl mode was broken.

- The 4.1pre7 changelog claimed that roots: now listed the desktop. This
  was broken and has now been fixed (Carmine Lucarelli).

- Fixed NPE when a client instance of jEdit requested an already opened
  buffer to be shown in a new view if that buffer had been changed on
  disk.

- Contents of filename field in "Save As" dialog box now take precedence