@@ -875,6 +875,7 @@ about.text=jEdit is brought to you by\n\
 	Vicente Salvador\n\
 	Vinod Kiran\n\
 	Will Sargent\n\
+	Will Varfar\n\
 	Wojciech Stryjewski\n\
 	\ \n\
 	I'd also like to thank the users for their\n\
